src/test/deca/context/invalid/SansObjet/ReadFloat-intDeclVar.deca
// Description:
//   Calling readFloat() on an int declaration
// 
// Results:
//     1.0
// 
// Historique: 
//    cree le 12/01/2022 

{
    int x = readFloat();
}
